[refactor] move jdk to jdk 19